# gerador-QR-Code

./: README.md  gerador_qr_code.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: desktop-builds.yml
