[project]
name = "gerador-qr-code"
version = "0.1.0"
description = ""
authors = [
    {name = "Jonas Lima",email = "jonas.lima.dev@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "pillow (>=12.1.1,<13.0.0)",
    "qrcode (>=8.2,<9.0)",
    "flet[all] (>=0.81.0,<0.82.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
